--- a/Assignments/A2_style.css
+++ b/Assignments/A2_style.css
@@ -13,13 +13,13 @@ h1{
   border-style: dashed;
   border-width: thick;
   border-spacing: 5px;
-  padding: 5px;
-  margin:0 20px;
+  padding: 5%;
+  margin:0 10%;
   border-color: #dba59b;
 }
 
 h2{
-  padding: 10px;
+  padding: 5%;
   background-color: #f2ddda;
   color: #9bb1db;
   margin: 5%;
@@ -48,6 +48,10 @@ a{
   text-transform: uppercase;
   color:#8a9ea2
 }
+div{
+  margin:6%;
+  background-color: red;
+}
 .liBox{
   position: relative;
   display:inline-block;
@@ -66,16 +70,16 @@ a{
 .navList{
   display: inline;
   background-color: #d1db98;
-  padding:6px;
+  padding:1%;
 
 }
 
 #birdPosi{
   position: absolute;
-  right:15%;
-  top:35%;
-  padding:3%;
-  max-width: 30%;
+  right:10%;
+  top: 35%;
+  padding:2% 7%;
+  max-width: 20%;
   border-style: dashed;
   border-color: #dba59b;
   border-width: thick;
@@ -90,6 +94,7 @@ a{
 #alignName p{
   text-align: center;
   margin: 0 40%;
+  padding:20px;
   font-size: 20px;
   text-decoration: line-through;
 }
