--- a/Assignments/Assignment3/A3_style.css
+++ b/Assignments/Assignment3/A3_style.css
@@ -1,51 +1,104 @@
+body, html{
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 auto;
+  background-color: aquamarine;
+}
 #wrapper{
-  width:1000px;
-  height:1000px;
-  background-color:blue;
+  width:95%;
+  height:auto;
+  min-height: 100%;
   margin: 0 auto;
 }
 h1, h2{
-  padding-left: 60px;
+  margin:auto;
+  padding-top: 1%;
+  font-family: "Times New Roman", Times, serif;
+  color:white;
+  text-align: center;
+}
+h1{
 
+  font-size: 40px;
+}
+h2{
+  margin:auto;
+  display: grid;
+  padding-bottom: 1%;
 }
 ul{
   list-style: none;
 }
+li{
+  margin-right: 15%;
+  padding-left: 4%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: aliceblue;
+}
+#search{
+  text-align: center;
+  border-style: inset;
+}
 #logo{
-  padding:20px;
+  margin: inherit;
+  padding-top:1%;
+  display: inline-block;
   float:left;
-  max-width: 50px;
-  max-height: 50px;
-}
-#trueHeader{
-  margin:auto;
-  background-color: gray;
-}
-#navBar{
-  margin:0 auto;
-  float:left;
-  width:150px;
+  width:5%;
   height:auto;
-  background-color: gray;
-  min-height: inherit;
-}
-#content{
-  margin:auto;
-  float:left;
 
 }
-#mapImg{
-  margin:10px;
-  padding:10px;
-  background-color: white;
-  float:center;
-  max-width: 450px;
+#trueHeader{
+  padding-left: 1%;
+
+  background-color: darkcyan;
 }
-#footer{
-  position:absolute;
+#navBar{
+  margin-top:1%;
+  position: absolute;
+  width:20%;
+  background-color: gray;
+
+}
+#content{
+  margin-left:22%;
+  margin-top: 1%;
+  width:70%;
+  height: 100%;
+  position: absolute;
+  background-color: aliceblue;
+
+}
+
+.news{
+  padding:1%;
+  background-color: antiquewhite;
+  margin: 1% auto;
+  width: 90%;
+  text-align: center;
+}
+
+#mapImg{
+  margin-left: 30%;
+  padding:1%;
+  background-color: white;
+  min-width: auto;
+}
+
+.footer{
+  position:fixed;
+  background-color: azure;
+  padding:20px;
   margin:0 auto;
   bottom: 0;
   width:inherit;
   height: 20px;
+  text-align: center;
+  display: inline-block;
 
+}
+
+#socials{
+  text-align: right;
 }
