--- a/Assignments/Assignment4/pw_style2.css
+++ b/Assignments/Assignment4/pw_style2.css
@@ -2,8 +2,7 @@
 #wrapper{
   width:100%;
   height:1080px;
-  margin: 0 auto;
-  /*background-color: grey;*/
+  margin: 0;
   position: static;
   z-index: -2;
 }
@@ -13,18 +12,21 @@ image adjustments.*/
   text-align: center;
   height: 280px;
   width: inherit;
-  overflow-y: visible;
+  overflow-y:hidden;
   margin: 0 auto;
   position: static;
   z-index: 0;
+}
+#headIMG{
+  position: fixed;
 }
 
 img{
   width: inherit;
   height:auto;
-  position: fixed;
   top:0;
   left:0;
+  overflow-x: hidden;
   z-index: -1;
 }
 /*make headers do their job, please god work this time*/
@@ -42,7 +44,7 @@ h1{
   font-family: 'Oswald', sans-serif;;
   font-size: 50px;
   margin-bottom: 0 auto;
-  text-shadow: 2px 2px black;
+
   /*background: rgba(255, 255, 255, 0.8);*/
 }
 
@@ -71,12 +73,13 @@ li{
   text-transform: uppercase;
   font-size: 25px;
   font-family: 'Roboto', sans-serif;
+  padding: 10px;
   padding-left: 25px;
   padding-right: 25px;
   /*padding-top: 9px;*/
-  background: rgba(0, 0, 0, 0.8);
+  background-color: #E3E7E9;
   /*background-color: black;*/
-  color: red;
+  color: #211414;
   margin: 0 auto;
 }
 
@@ -85,13 +88,20 @@ a{
   text-decoration: inherit;
 }
 /*Content elements - Content, previewIMG, linkable*/
+h3{
+  text-transform: uppercase;
+  color:Black;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  margin: 0 auto;
+}
 .content{
   text-align: center;
-  background-color: yellow;
+  background-color: #D4E3E5;
   margin: 0 auto;
   position: static;
   z-index: 10;
-  width: 90%;
+  width: 100%;
   height: auto;
 
 }
@@ -102,7 +112,7 @@ a{
   display: inline-block;
   border-radius: 10px;
   z-index: 9;
-  background-color: blue;
+  background-color: #AAC4D6;
   position: static;
 }
 p{
@@ -112,3 +122,35 @@ p{
   z-index: 10;
 }
 /*Footer elements - Socials, whatever, date, authorial info*/
+.footer{ /*for the div*/
+  position:relative;
+  width: inherit;
+  background-color: #EA115A;
+  text-align: center;
+  display: inline-block;
+}
+#socials{
+  position: relative;
+  display: inline-block;
+  float: right;
+  height: 78px;
+  z-index: 10;
+  padding: 15px;
+}
+#twitterSize{
+  position: relative;
+  display: inline-block;
+  float: right;
+  height: 100px;
+  z-index: 10;
+  padding-left: 3px;
+  padding-right: 15px;
+  padding-top: 8px;
+}
+#footerText{
+  display: inline-block;
+  z-index: 10;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
