--- a/Assignments/Assignment4/pw_style2.css
+++ b/Assignments/Assignment4/pw_style2.css
@@ -3,8 +3,9 @@
   width:100%;
   height:1080px;
   margin: 0;
-  position: static;
+  position: absolute;
   z-index: -2;
+  background-color: white;
 }
 /*Header elements - h1&h2 positioning,
 image adjustments.*/
@@ -19,6 +20,10 @@ image adjustments.*/
 }
 #headIMG{
   position: fixed;
+  margin-top: -9%;
+  overflow: hidden;
+  background-color: black;
+  opacity: .8;
 }
 
 img{
@@ -44,6 +49,10 @@ h1{
   font-family: 'Oswald', sans-serif;;
   font-size: 50px;
   margin-bottom: 0 auto;
+  padding:20px;
+  background-color: white;
+  margin-left: 30%;
+  margin-right: 30%;
 
   /*background: rgba(255, 255, 255, 0.8);*/
 }
@@ -53,14 +62,24 @@ h2{
   font-style: italic;
   color:red;
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   margin: 0 auto;
+  padding:10px;
+  margin-left: 41%;
+  margin-right: 41%;
+  background-color: white;
+  margin-top: -20px;
   /*background: rgba(255, 255, 255, 0.8);*/
 }
 /*Navbar Elements - block, ul, li*/
 .navbar{
   height:48px;
   margin-top: 0 auto;
+
+}
+.navbar li:hover {
+  background-color: #EDD5EC;
+  opacity: 1;
 }
 
 ul{
@@ -89,6 +108,7 @@ a{
 }
 /*Content elements - Content, previewIMG, linkable*/
 h3{
+  padding: 20px;
   text-transform: uppercase;
   color:Black;
   font-family: 'Roboto', sans-serif;
@@ -102,7 +122,7 @@ h3{
   position: static;
   z-index: 10;
   width: 100%;
-  height: auto;
+  min-height: 60%;
 
 }
 .previewIMG{
@@ -116,20 +136,68 @@ h3{
   position: static;
 }
 p{
+  text-align: center;
   margin: 0 auto;
   padding: 2%;
   position: static;
   z-index: 10;
 }
+button{
+  margin-top: 1%;
+  padding: 1%;
+}
+.galDiv{
+  height: 200px;
+  width: 200px;
+  padding: 15px;
+  display: inline-block;
+  overflow: hidden;
+}
+.galleryIMG{
+  display: inline-block;
+  height:inherit;
+  width: auto;
+  position: relative;
+  z-index: 10;
+}
+
+#shopTab{
+  display: inline-block;
+}
+
+.galDiv img {
+  opacity: 0.8;
+  cursor: pointer;
+}
+.galDiv img:hover {
+  opacity: 1;
+}
+.showcase{
+  padding: 10px;
+  padding-left: 25%;
+
+  width: 50%;
+
+}
+#output{
+  color:red;
+}
+#imgDescrip{
+  font-style: normal;
+  padding: 30px;
+  padding-bottom: 30px;
+  color: black;
+}
 /*Footer elements - Socials, whatever, date, authorial info*/
 .footer{ /*for the div*/
+
   position:relative;
   width: inherit;
   background-color: #EA115A;
   text-align: center;
   display: inline-block;
 }
-#socials{
+.socials{
   position: relative;
   display: inline-block;
   float: right;
@@ -153,4 +221,6 @@ p{
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   text-align: center;
+  left: 50%;
+  right: 50%;
 }
